// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAnswerModal component loads and displays Answer component 1`] = `
<div
  className="questions-modals"
  id="add-answer-modal"
>
  <div
    className="questions-modals-content"
  >
    <a
      className="close-modal"
    >
      X
    </a>
    <h4
      className="modal-title"
    >
      SUBMIT YOUR ANSWER
    </h4>
    <h4
      className="modal-subtitle"
    >
      : 
    </h4>
    <form
      className="add-answer-form"
    >
      <div
        className="modal-form"
      >
        <label>
          Your Answer*
        </label>
        <textarea
          id="new-answer-field"
          maxLength="1000"
          name="answer"
          type="text"
        />
      </div>
      <div
        className="modal-form"
      >
        <label>
          What is your nickname*
        </label>
        <input
          maxLength="60"
          name="nickname"
          placeholder="Example: jack543!"
          type="text"
        />
        <p
          className="modal-warning"
        >
          For privacy reasons, do not use your full name or email address
        </p>
      </div>
      <div
        className="modal-form"
      >
        <label>
          Your email*
        </label>
        <input
          maxLength="60"
          name="email"
          placeholder="Example: jack@email.com"
          type="email"
        />
        <p
          className="modal-warning"
        >
          For authentication reasons, you will not be emailed
        </p>
      </div>
      <div
        className="modal-form"
      >
        <input
          className="submit-modal"
          name="photos"
          onClick={[Function]}
          type="button"
          value="UPLOAD PHOTOS"
        />
      </div>
      <div
        className="modal-form"
      >
        <input
          className="submit-modal"
          type="submit"
          value="SUBMIT ANSWER"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`AddQuestionModal component loads and displays Answer component 1`] = `
<div
  className="questions-modals"
  id="add-question-modal"
>
  <div
    className="questions-modals-content"
  >
    <a
      className="close-modal"
    >
      X
    </a>
    <h4
      className="modal-title"
    >
      ASK YOUR QUESTION
    </h4>
    <h4
      className="modal-subtitle"
    >
      About the 
    </h4>
    <form
      className="add-question-form"
    >
      <div
        className="modal-form"
      >
        <label>
          Your Question*
        </label>
        <textarea
          id="new-question-field"
          maxLength="1000"
          name="question"
          type="text"
        />
      </div>
      <div
        className="modal-form"
      >
        <label>
          What is your nickname*
        </label>
        <input
          maxLength="60"
          name="nickname"
          placeholder="Example: jackson11!"
          type="text"
        />
        <p
          className="modal-warning"
        >
          For privacy reasons, do not use your full name or email address
        </p>
      </div>
      <div
        className="modal-form"
      >
        <label>
          Your email*
        </label>
        <input
          maxLength="60"
          name="email"
          placeholder="Why did you like the product or not?"
          type="email"
        />
        <p
          className="modal-warning"
        >
          For authentication reasons, you will not be emailed
        </p>
      </div>
      <div
        className="modal-form"
      >
        <input
          className="submit-modal"
          type="submit"
          value="SUBMIT QUESTION"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`Answer component loads and displays Answer component 1`] = `
<div
  className="answer"
>
  <p
    className="answer-title"
  >
    We are selling it here without any markup from the middleman!
  </p>
  <div
    className="answer-links"
  >
    <p
      className="answerer-details"
    >
      by
      <span
        className="answerer-seller"
      >
         
        Seller
      </span>
      , 
      August, 17, 2018
        |  Helpful? 
      <a
        className="answer-link"
        onClick={[Function]}
      >
        Yes
      </a>
       (
      4
      )  |  
      <a
        className="answer-link"
        onClick={[Function]}
      >
        Report
      </a>
    </p>
  </div>
</div>
`;

exports[`AnswerList component loads and displays AnswerList component 1`] = `
<div
  className="answers"
>
  <p
    className="a"
  >
    A: 
  </p>
  <div
    className="answer-list"
  >
    <div
      className="answer"
    >
      <p
        className="answer-title"
      >
        We are selling it here without any markup from the middleman!
      </p>
      <div
        className="answer-links"
      >
        <p
          className="answerer-details"
        >
          by
          <span
            className="answerer-seller"
          >
             
            Seller
          </span>
          , 
          August, 17, 2018
            |  Helpful? 
          <a
            className="answer-link"
            onClick={[Function]}
          >
            Yes
          </a>
           (
          4
          )  |  
          <a
            className="answer-link"
            onClick={[Function]}
          >
            Report
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question component loads and displays Question component 1`] = `
<div
  className="question"
>
  <div
    className="question-title"
  >
    <p
      className="question-body"
    >
      Q: 
      Why is this product cheaper here than other sites?
    </p>
    <div
      className="question-links"
    >
      <p>
        Helpful? 
        <a
          className="question-link"
          onClick={[Function]}
        >
          Yes
        </a>
         (
        4
        ) | 
        <a
          className="question-link"
          onClick={[Function]}
        >
          Add Answer
        </a>
      </p>
    </div>
  </div>
  <div
    className="answers"
  >
    <p
      className="a"
    >
      A: 
    </p>
    <div
      className="answer-list"
    >
      <div
        className="answer"
      >
        <p
          className="answer-title"
        >
          We are selling it here without any markup from the middleman!
        </p>
        <div
          className="answer-links"
        >
          <p
            className="answerer-details"
          >
            by
            <span
              className="answerer-seller"
            >
               
              Seller
            </span>
            , 
            August, 17, 2018
              |  Helpful? 
            <a
              className="answer-link"
              onClick={[Function]}
            >
              Yes
            </a>
             (
            4
            )  |  
            <a
              className="answer-link"
              onClick={[Function]}
            >
              Report
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionButtons component loads and displays Question Buttons comoponent 1`] = `
<div
  className="question-buttons"
>
  <button
    className="more-question-button"
  >
    MORE ANSWERED QUESTIONS
  </button>
  <button
    className="add-question-button"
    onClick={[Function]}
  >
    ADD A QUESTION +
  </button>
</div>
`;

exports[`Questions widget component loads and displays questions widget component 1`] = `
<div
  className="questions-widget"
>
  <h4
    className="questions-title"
  >
    QUESTIONS & ANSWERS
  </h4>
  <div
    className="search-bar"
  >
    <input
      id="questions-search-bar"
      onChange={[Function]}
      placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
      type="search"
    />
  </div>
  <div
    className="questions-list"
  >
    <div
      className="question"
    >
      <div
        className="question-title"
      >
        <p
          className="question-body"
        >
          Q: 
          Why is this product cheaper here than other sites?
        </p>
        <div
          className="question-links"
        >
          <p>
            Helpful? 
            <a
              className="question-link"
              onClick={[Function]}
            >
              Yes
            </a>
             (
            4
            ) | 
            <a
              className="question-link"
              onClick={[Function]}
            >
              Add Answer
            </a>
          </p>
        </div>
      </div>
      <div
        className="answers"
      >
        <p
          className="a"
        >
          A: 
        </p>
        <div
          className="answer-list"
        >
          <div
            className="answer"
          >
            <p
              className="answer-title"
            >
              We are selling it here without any markup from the middleman!
            </p>
            <div
              className="answer-links"
            >
              <p
                className="answerer-details"
              >
                by
                <span
                  className="answerer-seller"
                >
                   
                  Seller
                </span>
                , 
                August, 17, 2018
                  |  Helpful? 
                <a
                  className="answer-link"
                  onClick={[Function]}
                >
                  Yes
                </a>
                 (
                4
                )  |  
                <a
                  className="answer-link"
                  onClick={[Function]}
                >
                  Report
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="question"
    >
      <div
        className="question-title"
      >
        <p
          className="question-body"
        >
          Q: 
          How long does it last?
        </p>
        <div
          className="question-links"
        >
          <p>
            Helpful? 
            <a
              className="question-link"
              onClick={[Function]}
            >
              Yes
            </a>
             (
            2
            ) | 
            <a
              className="question-link"
              onClick={[Function]}
            >
              Add Answer
            </a>
          </p>
        </div>
      </div>
      <div
        className="answers"
      >
        <p
          className="a"
        >
          A: 
        </p>
        <div
          className="answer-list"
        >
          <div
            className="answer"
          >
            <p
              className="answer-title"
            >
              9 lives
            </p>
            <div
              className="answer-links"
            >
              <p
                className="answerer-details"
              >
                by
                <span
                  className="answerer-other"
                >
                   
                  iluvdogz
                </span>
                , 
                November, 11, 2019
                  |  Helpful? 
                <a
                  className="answer-link"
                  onClick={[Function]}
                >
                  Yes
                </a>
                 (
                31
                )  |  
                <a
                  className="answer-link"
                  onClick={[Function]}
                >
                  Report
                </a>
              </p>
            </div>
          </div>
          <div
            className="answer"
          >
            <p
              className="answer-title"
            >
              Some of the seams started splitting the first time I wore it!
            </p>
            <div
              className="answer-links"
            >
              <p
                className="answerer-details"
              >
                by
                <span
                  className="answerer-other"
                >
                   
                  sillyguy
                </span>
                , 
                November, 27, 2019
                  |  Helpful? 
                <a
                  className="answer-link"
                  onClick={[Function]}
                >
                  Yes
                </a>
                 (
                6
                )  |  
                <a
                  className="answer-link"
                  onClick={[Function]}
                >
                  Report
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="question-buttons"
  >
    <button
      className="more-question-button"
      onClick={[Function]}
    >
      MORE ANSWERED QUESTIONS
    </button>
    <button
      className="add-question-button"
      onClick={[Function]}
    >
      ADD A QUESTION +
    </button>
  </div>
</div>
`;

exports[`QuestionsList component loads and displays QuestionsList component 1`] = `null`;

exports[`SearchBar component loads and displays SearchBar component 1`] = `
<div
  className="search-bar"
>
  <input
    id="questions-search-bar"
    placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
    type="search"
  />
</div>
`;

exports[`UploadPhotosModal component loads and displays Answer component 1`] = `
<div
  className="questions-modals"
  id="upload-photo-modal"
>
  <div
    className="questions-modals-content"
  >
    <a
      className="close-modal"
    >
      X
    </a>
    <h4
      className="modal-title"
    >
      Upload Photos for 
    </h4>
    <form
      className="upload-photos-form"
    >
      <div
        className="modal-form"
      >
        <label
          htmlFor="photo-upload"
        >
          Choose photo to upload
        </label>
        <input
          accept="image/png, image/jpeg"
          id="upload-answer-photo"
          name="photoUpload"
          type="file"
        />
      </div>
      <div>
        <input
          className="submit-modal"
          type="submit"
          value="Upload Photo"
        />
      </div>
    </form>
    <div
      className="selected-photos"
    />
  </div>
</div>
`;
